--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 tokio = { version = "1.2", features = ["full"] }
 warp = "0.3"
-log = "0.4.20"
+uuid = {  version = "1.5.0", features = ["v4"] }
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
