--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ uuid = {  version = "1.5.0", features = ["v4"] }
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "migrate", "postgres" ]}
+reqwest = { version = "0.11.22", features = ["json"] }
