--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "migrate", "postgres" ]}
 reqwest = { version = "0.11.22", features = ["json"] }
+reqwest-middleware = "0.2.4"
+reqwest-retry = "0.3.0"
