--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "migrate", "pos
 reqwest = { version = "0.11.22", features = ["json"] }
 reqwest-middleware = "0.2.4"
 reqwest-retry = "0.3.0"
+rand = "0.8.5"
+rust-argon2 = "2.0.0"
+paseto = "2.0"
+chrono = "0.4.31"
